[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.2.3"
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
cw-storage-plus = "1.0.1"
pyth-sdk-cw = "1.0.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
